network_module/src/main/java/com/example/network_module/error/ErrorItem.kt
package com.example.network_module.error

data class ErrorItem(
    val icon: Int? = null,
    val code: String? = null,
    val title: String? = null,
    val message: String? = null,
    val button: String? = null
)
